--- a/demo/index.html
+++ b/demo/index.html
@@ -120,7 +120,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <button data-dialog="backdrop">backdrop</button>
 
       <simple-overlay id="backdrop" with-backdrop>
-        Hello world!
+        <p>Hello world!</p>
+        <button data-dialog="backdrop2">backdrop2</button>
+        <simple-overlay id="backdrop2" with-backdrop>
+          backdrop 2
+        </simple-overlay>
       </simple-overlay>
 
       <button data-dialog="autofocus">autofocus</button>
