--- a/test/iron-overlay-behavior.html
+++ b/test/iron-overlay-behavior.html
@@ -465,7 +465,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               var style1Z = parseInt(window.getComputedStyle(overlays[1]).zIndex, 10);
               var bgStyleZ = parseInt(window.getComputedStyle(overlays[0].backdropElement).zIndex, 10);
               assert.isTrue(style1Z > styleZ, 'overlays[1] has higher z-index than overlays[0]');
-              assert.isTrue(styleZ > bgStyleZ, 'overlays[0] has higher z-index than backdrop');
+              assert.isTrue(styleZ < bgStyleZ, 'backdrop has higher z-index than overlays[0]');
               done();
             });
           });
@@ -476,7 +476,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             overlays[0].withBackdrop = false;
             // Don't wait for animations.
             overlays[0].backdropElement.complete();
-            
+
             assert.isFalse(overlays[0].backdropElement.opened, 'backdrop is closed');
             assert.isNotObject(overlays[0].backdropElement.parentNode, 'backdrop is removed from document');
             done();
