--- a/test/iron-overlay-behavior.html
+++ b/test/iron-overlay-behavior.html
@@ -253,6 +253,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           });
         });
 
+        test('no-auto-focus will not focus node with autofocus', function(done) {
+          overlay = fixture('autofocus');
+          overlay.noAutoFocus = true;
+          runAfterOpen(overlay, function() {
+            assert.isTrue(overlay.noAutoFocus, 'no-auto-focus is correctly set');
+            assert.notEqual(Polymer.dom(overlay).querySelector('[autofocus]'), document.activeElement, '<button autofocus> is focused');
+            done();
+          });
+        });
+
         test('cancel an overlay by clicking outside', function(done) {
           runAfterOpen(overlay, function() {
             overlay.addEventListener('iron-overlay-canceled', function(event) {
