--- a/iron-overlay-behavior.html
+++ b/iron-overlay-behavior.html
@@ -152,7 +152,7 @@ context. You should place this element as a child of `<body>` whenever possible.
     },
 
     listeners: {
-      'iron-resize': '_onIronResize'
+      'iron-resize': '_boundOnIronResize'
     },
 
     /**
@@ -171,6 +171,10 @@ context. You should place this element as a child of `<body>` whenever possible.
       // with-backdrop need tabindex to be set in order to trap the focus.
       // If it is not set, IronOverlayBehavior will set it, and remove it if with-backdrop = false.
       this.__shouldRemoveTabIndex = false;
+      this.__openChangedAsync = null;
+      this.__toggleListenersAsync = null;
+      this.__onIronResizeAsync = null;
+      this.__notifyOpened = false;
       this._ensureSetup();
     },
 
@@ -249,29 +253,38 @@ context. You should place this element as a child of `<body>` whenever possible.
 
       this._manager.trackBackdrop(this);
 
-      if (this.opened) {
-        this._prepareRenderOpened();
+      this.__safeToggleListeners();
+      this.__renderOpenedChanged();
+    },
+
+    __renderOpenedChanged: function () {
+      if (this.__openChangedAsync) {
+        cancelAnimationFrame(this.__openChangedAsync);
       }
 
-      if (this._openChangedAsync) {
-        this.cancelAsync(this._openChangedAsync);
-      }
-      // Async here to allow overlay layer to become visible, and to avoid
-      // listeners to immediately close via a click.
-      this._openChangedAsync = this.async(function() {
-        // overlay becomes visible here
-        this.style.display = '';
-        // Force layout to ensure transition will go. Set offsetWidth to itself
-        // so that compilers won't remove it.
-        this.offsetWidth = this.offsetWidth;
+      this.__openChangedAsync = requestAnimationFrame(function() {
         if (this.opened) {
-          this._renderOpened();
+          this._prepareRenderOpened();
+          // Allow overlay layer to become visible
+          this.__openChangedAsync = requestAnimationFrame(function () {
+            this.__ensureDisplay();
+            this._renderOpened();
+            this.__openChangedAsync = null;
+          }.bind(this));
         } else {
+          this.__ensureDisplay();
           this._renderClosed();
+          this.__openChangedAsync = null;
         }
-        this._toggleListeners();
-        this._openChangedAsync = null;
-      }, 1);
+      }.bind(this));
+    },
+
+    __ensureDisplay: function () {
+      // overlay becomes visible here
+      this.style.display = '';
+      // Force layout to ensure transition will go. Set offsetWidth to itself
+      // so that compilers won't remove it.
+      this.offsetWidth = this.offsetWidth;
     },
 
     _canceledChanged: function() {
@@ -324,6 +337,23 @@ context. You should place this element as a child of `<body>` whenever possible.
       this._toggleListener(this.opened, document, 'focus', this._boundOnCaptureFocus, true);
     },
 
+    __safeToggleListeners: function () {
+      if (this.__toggleListenersAsync) {
+        this.cancelAsync(this.__toggleListenersAsync);
+        this.__toggleListenersAsync = null;
+      }
+      if (this.opened) {
+        // async to avoid listeners to immediately close via a click.
+        this.__toggleListenersAsync = this.async(function() {
+          this._toggleListeners();
+          this.__toggleListenersAsync = null;
+        }, 1);
+      } else {
+        // Immediately remove listeners
+        this._toggleListeners();
+      }
+    },
+
     // tasks which must occur before opening; e.g. making the element visible
     _prepareRenderOpened: function() {
       this._manager.addOverlay(this);
@@ -357,8 +387,9 @@ context. You should place this element as a child of `<body>` whenever possible.
       // focus the child node with [autofocus]
       this._applyFocus();
 
+      this.__notifyOpened = true;
+
       this._observer = Polymer.dom(this).observeNodes(this.notifyResize);
-      this.fire('iron-overlay-opened');
     },
 
     _finishRenderClosed: function() {
@@ -383,8 +414,9 @@ context. You should place this element as a child of `<body>` whenever possible.
     _finishPositioning: function() {
       this.style.display = 'none';
       this.style.transform = this.style.webkitTransform = '';
-      // force layout to avoid application of transform
-      /** @suppress {suspiciousCode} */ this.offsetWidth;
+      // Force layout to ensure transition will go. Set offsetWidth to itself
+      // so that compilers won't remove it.
+      this.offsetWidth = this.offsetWidth;
       this.style.transition = this.style.webkitTransition = '';
     },
 
@@ -429,6 +461,24 @@ context. You should place this element as a child of `<body>` whenever possible.
         } else {
           this._focusedChild = path[0];
         }
+      }
+    },
+
+    _boundOnIronResize: function () {
+      if (this.__onIronResizeAsync) {
+        cancelAnimationFrame(this.__onIronResizeAsync);
+        this.__onIronResizeAsync = null;
+      }
+      if (this.opened) {
+        this.__onIronResizeAsync = requestAnimationFrame(function() {
+          this._onIronResize();
+          this.__onIronResizeAsync = null;
+          if (this.__notifyOpened) {
+            this.fire('iron-overlay-opened');
+            this.__notifyOpened = false;
+          }
+
+        }.bind(this));
       }
     },
 
